--- a/apps/base/weave-ingress/kustomization.yaml
+++ b/apps/base/weave-ingress/kustomization.yaml
@@ -1,7 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: podinfo
+namespace: flux-system
 resources:
-  - namespace.yaml
-  - repository.yaml
-  - release.yaml
+  - ingress.yaml
+  - middlewares.yaml
