--- a/infrastructure/controllers/cert-manager.yaml
+++ b/infrastructure/controllers/cert-manager.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     toolkit.fluxcd.io/tenant: sre-team
 ---
-apiVersion: source.toolkit.fluxcd.io/v1
+apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: cert-manager
@@ -15,21 +15,23 @@ spec:
   interval: 24h
   url: https://charts.jetstack.io
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2
+apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
   name: cert-manager
   namespace: cert-manager
 spec:
-  interval: 30m
+  interval: 5m
   chart:
     spec:
       chart: cert-manager
-      version: "1.x"
+      version: 'v1.15.3'
       sourceRef:
         kind: HelmRepository
         name: cert-manager
         namespace: cert-manager
-      interval: 12h
+      interval: 1m
   values:
     installCRDs: true
+    replicaCount: 3
+
