--- a/infrastructure/controllers/reflector.yaml
+++ b/infrastructure/controllers/reflector.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2beta2
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: reflector
@@ -18,7 +18,7 @@ spec:
   values:
     replicaCount: 1
 ---
-apiVersion: source.toolkit.fluxcd.io/v1beta2
+apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: reflector
