--- a/infrastructure/controllers/traefik-proxy.yaml
+++ b/infrastructure/controllers/traefik-proxy.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     toolkit.fluxcd.io/tenant: kog-team
 ---
-apiVersion: source.toolkit.fluxcd.io/v1beta2
+apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: traefik
@@ -14,7 +14,7 @@ spec:
   interval: 1m0s
   url: https://traefik.github.io/charts
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2beta2
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: traefik
