chorse: add longhorn back again

--- a/infrastructure/controllers/kustomization.yaml
+++ b/infrastructure/controllers/kustomization.yaml
@@ -5,5 +5,5 @@ resources:
   - kubeseal.yaml
   - traefik-proxy.yaml
   - reflector.yaml
-  #- longhorn.yaml
+  - longhorn.yaml
   - weave-gitops.yaml
