--- a/apps/base/nessie/nessie.yaml
+++ b/apps/base/nessie/nessie.yaml
@@ -9,7 +9,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: nessie
-  namespace: nessie-ns
+  namespace: flux-system
 spec:
   interval: 24h
   url: https://charts.projectnessie.org
@@ -24,11 +24,11 @@ spec:
   chart:
     spec:
       chart: nessie
-      version: '0.99.0'
+      version: "0.99.0"
       sourceRef:
         kind: HelmRepository
         name: nessie
-        namespace: nessie-ns
+        namespace: flux-system
       interval: 1m
   values:
     replicaCount: 3
