--- a/apps/base/nessie/nessie.yaml
+++ b/apps/base/nessie/nessie.yaml
@@ -1,9 +1,10 @@
+---
 apiVersion: v1
 kind: Namespace
 metadata:
   name: nessie-ns
   labels:
-    toolkit.fluxcd.io/tenant: kog-team
+    toolkit.fluxcd.io/tenant: sre-team
 ---
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
