--- a/apps/base/nessie/nessie.yaml
+++ b/apps/base/nessie/nessie.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: nessie-ns
+  name: nessie
   labels:
     toolkit.fluxcd.io/tenant: sre-team
 ---
@@ -10,7 +10,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: nessie
-  namespace: flux-system
+  namespace: nessie
 spec:
   interval: 24h
   url: https://charts.projectnessie.org
@@ -19,7 +19,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
   name: nessie
-  namespace: nessie-ns
+  namespace: nessie
 spec:
   interval: 5m
   chart:
@@ -29,7 +29,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: nessie
-        namespace: flux-system
+        namespace: nessie
       interval: 1m
   values:
     replicaCount: 3
