--- a/apps/base/nessie/nessie.yaml
+++ b/apps/base/nessie/nessie.yaml
@@ -40,3 +40,11 @@ spec:
         name: postgres-creds
         username: postgres_username
         password: postgres_password
+    advancedConfig:
+      quarkus:
+        http:
+          proxy:
+            proxy-address-forwarding: "true"
+            allow-x-forwarded: "true"
+            enable-forwarded-host: "true"
+            enable-forwarded-prefix: "true"
