feat: add minio secret

--- a/apps/base/nessie/kustomization.yaml
+++ b/apps/base/nessie/kustomization.yaml
@@ -3,4 +3,5 @@ kind: Kustomization
 resources:
   - nessie.yaml
   - postgres-creds-secrets-sealed.yaml
+  - minio-creds-secret-sealed.yaml
   - ingress.yaml
