--- a/apps/base/nessie/nessie.yaml
+++ b/apps/base/nessie/nessie.yaml
@@ -1,3 +1,4 @@
+
 ---
 apiVersion: v1
 kind: Namespace
@@ -70,3 +71,27 @@ spec:
             allow-x-forwarded: "true"
             enable-forwarded-host: "true"
             enable-forwarded-prefix: "true"
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  namespace: nessie
+  name: secret-reader
+rules:
+- apiGroups: [""]
+  resources: ["secrets"]
+  verbs: ["get", "list", "watch"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: nessie-secret-reader
+  namespace: nessie
+subjects:
+- kind: ServiceAccount
+  name: nessie
+  namespace: nessie
+roleRef:
+  kind: Role
+  name: secret-reader
+  apiGroup: rbac.authorization.k8s.io
