feat: add dagster

--- a/infrastructure/configs/kustomization.yaml
+++ b/infrastructure/configs/kustomization.yaml
@@ -4,3 +4,4 @@ resources:
   - cluster-issuers.yaml
   - allow-ingress-sealed-secrets.yaml
   - cloudflare-token-secret-sealed.yaml
+  - ghcr-secret-sealed.yaml
