--- a/apps/base/dagster/dagster.yaml
+++ b/apps/base/dagster/dagster.yaml
@@ -38,7 +38,7 @@ spec:
       deployments:
         - name: codeserver
           image:
-            repository: ghcr.io/reinthal/howigotpwned
+            repository: ghcr.io/reinthal/dataproject
             tag: latest
             pullPolicy: IfNotPresent
           port: 4000
