feat: add image repos

--- a/infrastructure/configs/kustomization.yaml
+++ b/infrastructure/configs/kustomization.yaml
@@ -5,3 +5,4 @@ resources:
   - allow-ingress-sealed-secrets.yaml
   - cloudflare-token-secret-sealed.yaml
   - ghcr-secret-sealed.yaml
+  - image-repos.yaml
