fix: traefik ingress

--- a/apps/base/traefik/ingress.yaml
+++ b/apps/base/traefik/ingress.yaml
@@ -13,7 +13,7 @@ spec:
       kind: Rule
       middlewares:
         - name: traefik-dashboard-basicauth
-          namespace: flux-system
+          namespace: traefik
       services:
         - name: api@internal
           kind: TraefikService
