feat: add nessie branch resource configurations

--- a/apps/base/dagster/codeserver-configuration.yaml
+++ b/apps/base/dagster/codeserver-configuration.yaml
@@ -5,7 +5,9 @@ metadata:
   name: codeserver-configuration
   namespace: dagster
 data:
-  
+  NESSIE_BRANCH: main
+  NESSIE_WAREHOUSE: s3://iceberg/warehouse
+  NESSIE_URI: https://nessie.local.reinthal.cc/iceberg
   SOURCES__FILESYSTEM__CREDENTIALS__AWS_S3_ENDPOINT: http://nas.reinthal.me:9000
   DESTINATION__FILESYSTEM__CREDENTIALS__AWS_ACCESS_KEY_ID: fHMreKXpjeyP8JnWgeVk
   DESTINATION__FILESYSTEM__CREDENTIALS__AWS_SECRET_ACCESS_KEY: pGGAYZBQhVPm6ch9JGl4zOR6ukB0CnT8fXs29HuN
