--- a/apps/base/ray/ray.yaml
+++ b/apps/base/ray/ray.yaml
@@ -32,3 +32,64 @@ spec:
       interval: 1m
   values: {}
 ---
+apiVersion: helm.toolkit.fluxcd.io/v2beta2
+kind: HelmRelease
+metadata:
+  name: raycluster
+  namespace: flux-system
+spec:
+  interval: 5m
+  dependsOn:
+    - name: kuberay-operator
+  chart:
+    spec:
+      chart: ray-cluster
+      version: "1.2.2"
+      sourceRef:
+        kind: HelmRepository
+        name: kuberay
+        namespace: ray-system
+      interval: 1m
+  values:
+    image:
+      repository: rayproject/ray
+      tag: "2.9.0"
+      pullPolicy: IfNotPresent
+
+    head:
+      enableIngress: true
+      serviceType: ClusterIP
+      resources:
+        requests:
+          cpu: "1000m"
+          memory: "2Gi"
+        limits:
+          cpu: "2"
+          memory: "4Gi"
+
+    worker:
+      replicas: 1
+      minReplicas: 1
+      maxReplicas: 8
+      resources:
+        requests:
+          cpu: "1000m"
+          memory: "2Gi"
+        limits:
+          cpu: "4"
+          memory: "4Gi"
+
+    # Ray configuration
+    rayVersion: "2.9.0"
+    rayStartParams:
+      dashboard-host: "0.0.0.0"
+      num-cpus: "1"
+      # Add any additional Ray start parameters here
+
+    serviceAccount:
+      create: true
+
+    persistence:
+      enabled: true
+      storageClass: "longhorn"  # Adjust according to your cluster's storage class
+      size: "10Gi"
