--- a/infrastructure/controllers/cleanup.yaml
+++ b/infrastructure/controllers/cleanup.yaml
@@ -1,7 +1,16 @@
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: cleaner
+  labels:
+    toolkit.fluxcd.io/tenant: sre-team
+---
 apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: pod-cleanup
+  namespace: cleaner
 spec:
   schedule: "*/1 * * * *"
   jobTemplate:
@@ -19,24 +28,27 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: pod-cleanup-sa
+  namespace: cleaner
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: pod-cleanup-role
+  namespace: cleaner
 rules:
-- apiGroups: [""]
-  resources: ["pods"]
-  verbs: ["get", "list", "delete"]
+  - apiGroups: [""]
+    resources: ["pods"]
+    verbs: ["get", "list", "delete"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: pod-cleanup-role-binding
+  namespace: cleaner
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
   name: pod-cleanup-role
 subjects:
-- kind: ServiceAccount
-  name: pod-cleanup-sa
+  - kind: ServiceAccount
+    name: pod-cleanup-sa
