--- a/apps/base/dagster/cleanup.yaml
+++ b/apps/base/dagster/cleanup.yaml
@@ -21,13 +21,13 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: pod-cleanup-sa
-  namespace: cleaner
+  namespace: dagster
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: pod-cleanup-role
-  namespace: cleaner
+  namespace: dagster
 rules:
   - apiGroups: [""]
     resources: ["pods"]
@@ -37,7 +37,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: pod-cleanup-role-binding
-  namespace: cleaner
+  namespace: dagster
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
