--- a/infrastructure/supporting-infra/kustomization.yaml
+++ b/infrastructure/supporting-infra/kustomization.yaml
@@ -1,7 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  []
 
   # minio
-  - minio.yaml
-  - minio-tenant-config-secret-sealed.yaml
+  #- minio.yaml
+  #- minio-tenant-config-secret-sealed.yaml
