--- a/apps/base/trino/trino.yaml
+++ b/apps/base/trino/trino.yaml
@@ -5,11 +5,13 @@ metadata:
   labels:
     toolkit.fluxcd.io/tenant: kog-team
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2beta2
+apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: trino
+  namespace: trino
 spec:
+  interval: 24h
   url: https://trinodb.github.io/charts
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
@@ -21,12 +23,12 @@ spec:
   interval: 5m
   chart:
     spec:
-      chart: trino/trino
+      chart: trino
       version: "464"
       sourceRef:
         kind: HelmRepository
         name: trino
-        namespace: flux-system
+        namespace: trino
       interval: 1m
   values:
     image:
