--- a/apps/base/trino/trino.yaml
+++ b/apps/base/trino/trino.yaml
@@ -24,7 +24,7 @@ spec:
   chart:
     spec:
       chart: trino
-      version: trino-0.33.0
+      version: 0.33.0
       sourceRef:
         kind: HelmRepository
         name: trino
