--- a/apps/base/trino/ingress.yaml
+++ b/apps/base/trino/ingress.yaml
@@ -3,27 +3,16 @@ kind: IngressRoute
 metadata:
   name: trino
   namespace: trino
+  annotations:
+    kubernetes.io/ingress.class: traefik-external
 spec:
   entryPoints:
     - websecure
   routes:
     - match: Host(`trino.local.reinthal.cc`)
       kind: Rule
-     middlewares:
-        - name: trino-dashboard-basicauth
-          namespace: trino
-     services:
+      services:
         - name: trino-cluster-trino
           port: 8080
   tls:
     secretName: local-reinthal-cc-tls
----
-apiVersion: traefik.io/v1alpha1
-kind: Middleware
-metadata:
-  name: trino-dashboard-basicauth
-  namespace: trino
-spec:
-  basicAuth:
-    secret: trino-dashboard-auth
-
