--- a/apps/base/trino/trino.yaml
+++ b/apps/base/trino/trino.yaml
@@ -52,4 +52,5 @@ spec:
         s3.endpoint=http\://nas.reinthal.me\:9000
         s3.path-style-access=true
         s3.region=us-east-1
-        http-server.process-forwarded=true
+    additionalConfigProperties:
+      - http-server.process-forwarded=true
