--- a/apps/base/trino/trino.yaml
+++ b/apps/base/trino/trino.yaml
@@ -57,10 +57,13 @@ spec:
         s3.region=us-east-1
       dev: |-
         connector.name=iceberg
-        iceberg.catalog.type=nessie
-        iceberg.nessie-catalog.uri=https\://nessie.local.reinthal.cc/api/v2
-        iceberg.nessie-catalog.default-warehouse-dir=/tmp
-        iceberg.nessie-catalog.ref=dev
-        iceberg.nessie-catalog.client-api-version=V2
+        fs.native-s3.enabled=true
+        iceberg.catalog.type=rest
+        iceberg.rest-catalog.security=NONE
+        iceberg.rest-catalog.uri=https\://nessie.local.reinthal.cc/iceberg/dev
+        iceberg.rest-catalog.vended-credentials-enabled=false
+        s3.endpoint=http\://nas.reinthal.me\:9000
+        s3.path-style-access=true
+        s3.region=us-east-1
     additionalConfigProperties:
       - http-server.process-forwarded=true
