fix(nessie-gc): make job into cronjob instead, setting some parameters

--- a/apps/base/nessie/kustomization.yaml
+++ b/apps/base/nessie/kustomization.yaml
@@ -5,4 +5,4 @@ resources:
   - postgres-creds-secrets-sealed.yaml
   - minio-creds-secret-sealed.yaml
   - ingress.yaml
-  - jobs.yaml
+  - cleanup.yaml
