fix(nessie-gc): make job into cronjob instead, setting some parameters3

--- a/apps/base/nessie/cleanup.yaml
+++ b/apps/base/nessie/cleanup.yaml
@@ -1,4 +1,4 @@
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: nessie-gc-cronjob
@@ -7,23 +7,23 @@ spec:
   schedule: "0 3 * * *"
   jobTemplate:
     spec:
-      ttlSecondsAfterFinished: 72000
+      ttlSecondsAfterFinished: 142000
       template:
         spec:
           containers:
-          - name: nessie-gc
-            image: ghcr.io/projectnessie/nessie-gc
-            args: 
-              - gc
-              - --uri
-              - http://nessie.nessie.svc.cluster.local:19120/api/v2
-              - --jdbc-url
-              - "$(JDBC_URL)"
-              - --jdbc-user
-              - "$(JDBC_USER)"
-              - --jdbc-password
-              - "$(JDBC_PASSWORD)"
-            envFrom:
-            - secretRef:
-                name: nessie-gc-credentials
+            - name: nessie-gc
+              image: ghcr.io/projectnessie/nessie-gc
+              args:
+                - gc
+                - --uri
+                - http://nessie.nessie.svc.cluster.local:19120/api/v2
+                - --jdbc-url
+                - "$(JDBC_URL)"
+                - --jdbc-user
+                - "$(JDBC_USER)"
+                - --jdbc-password
+                - "$(JDBC_PASSWORD)"
+              envFrom:
+                - secretRef:
+                    name: nessie-gc-credentials
           restartPolicy: Never
