fix(nessie-gc): make job into cronjob instead, setting some parameters4

--- a/apps/base/nessie/kustomization.yaml
+++ b/apps/base/nessie/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - nessie.yaml
   - postgres-creds-secrets-sealed.yaml
+  - nessie-gc-credentials-sealed.yaml
   - minio-creds-secret-sealed.yaml
   - ingress.yaml
   - cleanup.yaml
