--- a/apps/base/dagster/kustomization.yaml
+++ b/apps/base/dagster/kustomization.yaml
@@ -2,11 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: dagster
 resources:
-- dagster.yaml
-- codeserver-configuration.yaml
-- codeserver-secrets-sealed.yaml
-- postgres-auth-sealed.yaml
-- cleanup.yaml
-# frontend
-- ingress.yaml
-
+  - dagster.yaml
+  - codeserver-configuration.yaml
+  - codeserver-secrets-sealed.yaml
+  - postgres-auth-sealed.yaml
+  #- cleanup.yaml
+  # frontend
+  - ingress.yaml
