--- a/apps/base/nessie/kustomization.yaml
+++ b/apps/base/nessie/kustomization.yaml
@@ -7,4 +7,4 @@ resources:
   - minio-creds-secret-sealed.yaml
   - ingress.yaml
   - cleanup.yaml
-  - garbace-collector.yaml
+  - garbage-collector.yaml
