--- a/apps/base/nessie/garbage-collector.yaml
+++ b/apps/base/nessie/garbage-collector.yaml
@@ -1,7 +1,8 @@
 apiVersion: apps/v1
 kind: ReplicaSet
 metadata:
-  name: nessie
+  name: nessie-gc
+  namespace: nessie
 spec:
   replicas: 1
   selector:
