--- a/apps/base/nessie/garbage-collector.yaml
+++ b/apps/base/nessie/garbage-collector.yaml
@@ -16,6 +16,7 @@ spec:
       containers:
         - name: nessie-gc
           image: ghcr.io/projectnessie/nessie-gc
+          command: ["sh", "-c", "bash"]
           args:
             - gc
             - --uri
