--- a/apps/base/nessie/cleanup.yaml
+++ b/apps/base/nessie/cleanup.yaml
@@ -24,7 +24,7 @@ spec:
                 - --jdbc-password
                 - "$(JDBC_PASSWORD)"
                 - --iceberg
-                - "s3.access-key-id=$(S3_ACCESS_KEY),s3.secret-access-key=$(S3_SECRET_KEY),s3.endpoint=$(S3_ENDPOINT)"
+                - "s3.access-key-id=$S3_ACCESS_KEY,s3.secret-access-key=$S3_SECRET_KEY,s3.endpoint=$S3_ENDPOINT"
               envFrom:
                 - secretRef:
                     name: nessie-gc-credentials
