--- a/infrastructure/supporting-infra/kustomization.yaml
+++ b/infrastructure/supporting-infra/kustomization.yaml
@@ -2,7 +2,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - nfs.yaml
+  
+  # keycloak
+  - keycloak.yaml
+  - keycloak-secret-sealed.yaml
 
   # minio
-  #- minio.yaml
-  #- minio-tenant-config-secret-sealed.yaml
+  - minio.yaml
+  - minio-tenant-config-secret-sealed.yaml
