--- a/infrastructure/supporting-infra/kustomization.yaml
+++ b/infrastructure/supporting-infra/kustomization.yaml
@@ -2,9 +2,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - nfs.yaml
-  
+
   # keycloak
   - keycloak.yaml
+  - keycloak-admin-ingress.yaml
+  - keycloak-auth-ingress.yaml
   - keycloak-secret-sealed.yaml
 
   # minio
