--- a/infrastructure/supporting-infra/keycloak-admin-ingress.yaml
+++ b/infrastructure/supporting-infra/keycloak-admin-ingress.yaml
@@ -11,17 +11,12 @@ spec:
   routes:
     - match: Host(`keycloak.local.reinthal.cc`) && PathPrefix(`/auth`)
       kind: Rule
+      middlewares:
+        - name: keycloak-headers
       services:
         - name: keycloak
-          port: 80
-      headers:
-        customRequestHeaders:
-          X-Forwarded-For: "client_ip" # Client IP forwarding
-          X-Forwarded-Proto: "https" # Forward the HTTPS protocol
-          X-Forwarded-Port: "443" # Forward the port as 443 for HTTPS
-        customResponseHeaders:
-          Strict-Transport-Security:
-            "max-age=31536000; includeSubDomains" # HSTS for security
+          port:
+            80
             #- match: Host(`keycloak.local.reinthal.cc`) && Path(`/`)
             #  kind: Rule
             #redirect:
