--- a/apps/base/dagster/ingress.yaml
+++ b/apps/base/dagster/ingress.yaml
@@ -27,15 +27,18 @@ spec:
   entryPoints:
     - websecure
   routes:
+    # OAuth2 Proxy routes
+    - match: Host(`dagster.local.reinthal.cc`) && PathPrefix(`/oauth2/`)
+      kind: Rule
+      services:
+        - name: oauth2-dagster-webui-proxy
+          port: 4180
+    # Dagster routes - now going through OAuth2 Proxy instead of directly to Dagster
     - match: Host(`dagster.local.reinthal.cc`)
       kind: Rule
-      middlewares:
-        - name: dagster-dashboard-basicauth
-          namespace: dagster
       services:
-        - name: dagster-dagster-webserver
-          port: 80
+        - name: oauth2-dagster-webui-proxy  # Point to OAuth2 proxy instead of Dagster directly
+          port: 4180
   tls:
     secretName: local-reinthal-cc-tls
-
 ---
