refactor: add dagster to secret name, move client id to secret according to error in k8s

--- a/apps/base/dagster/oauth2-proxy-dagster-helmrelease.yaml
+++ b/apps/base/dagster/oauth2-proxy-dagster-helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
 
     config:
 
-      existingSecret: oauth2-proxy-secrets
+      existingSecret: oauth2-proxy-dagster-secrets
       existingConfig: oauth2-dagster-proxy-config
 
     image:
