--- a/infrastructure/supporting-infra/truenas-csp.yaml
+++ b/infrastructure/supporting-infra/truenas-csp.yaml
@@ -7,3 +7,27 @@ metadata:
 spec:
   interval: 360m0s
   url: https://hpe-storage.github.io/truenas-csp/
+---
+apiVersion: helm.toolkit.fluxcd.io/v2
+kind: HelmRelease
+metadata:
+  name: truenas-csp
+  namespace: flux-system
+spec:
+  chart:
+    spec:
+      chart: truenas-csp
+      version: 1.2.0
+      reconcileStrategy: ChartVersion
+      sourceRef:
+        kind: HelmRepository
+        name: truenas-csp
+        namespace: flux-system
+
+  install:
+    createNamespace: true
+  interval: 360h0m0s
+  releaseName: truenas-csp
+  targetNamespace: truenas-csp
+
+  values: []
