--- a/apps/base/elastic/elastic.yaml
+++ b/apps/base/elastic/elastic.yaml
@@ -32,4 +32,4 @@ spec:
             resources:
               requests:
                 storage: 300Gi
-            storageClassName: nfs
+            storageClassName: local-path
