--- a/infrastructure/supporting-infra/kustomization.yaml
+++ b/infrastructure/supporting-infra/kustomization.yaml
@@ -3,19 +3,6 @@ kind: Kustomization
 resources:
   - nfs.yaml
 
-  # keycloak
-  - keycloak.yaml
-  - keycloak-middlewares.yaml
-  - keycloak-admin-ingress.yaml
-  - keycloak-auth-ingress.yaml
-  - keycloak-secret-sealed.yaml
-
   # minio
-  - minio.yaml
-  - minio-tenant-config-secret-sealed.yaml
-
-  # Truenas CSP
-  #- truenas-test-pvc.yaml
-  #- truenas-csp.yaml
-  #- truenas-csp-storage-class.yaml
-  #- truenas-csp-secret-sealed.yaml
+  #- minio.yaml
+  #- minio-tenant-config-secret-sealed.yaml
