feat: remove elastic

--- a/apps/staging/kustomization.yaml
+++ b/apps/staging/kustomization.yaml
@@ -8,6 +8,6 @@ resources:
   - ../base/ray
   - ../base/cyberchef
   - ../base/trino
-  - ../base/elastic
+  #- ../base/elastic
   - ../base/kubeflow
   - ../base/forgejo
