--- a/infrastructure/controllers/longhorn.yaml
+++ b/infrastructure/controllers/longhorn.yaml
@@ -16,7 +16,7 @@ spec:
   chart:
     spec:
       chart: longhorn
-      version: '1.7.1'
+      version: "1.7.1"
       sourceRef:
         kind: HelmRepository
         name: longhorn
@@ -31,3 +31,16 @@ metadata:
 spec:
   interval: 24h
   url: https://charts.longhorn.io
+---
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: longhorn-local
+provisioner: driver.longhorn.io
+allowVolumeExpansion: true
+reclaimPolicy: Delete
+volumeBindingMode: WaitForFirstConsumer
+parameters:
+  numberOfReplicas: "1"
+  dataLocality: "strict-local" # This ensures the volume stays on the same node as the pod
+  staleReplicaTimeout: "60"
